Switched to SpringBoot Improved Jsoup favicon detection

--- a/fav-helm/templates/ingress.yaml
+++ b/fav-helm/templates/ingress.yaml
@@ -22,5 +22,5 @@ spec:
         - path: /
           backend:
             serviceName: {{ .Values.name }}
-            servicePort: {{ .Values.env.FAV_HTTP_PORT }}
+            servicePort: {{ .Values.env.SERVER_PORT }}
 {{- end }}
