--- a/fav-helm/templates/deploy.yaml
+++ b/fav-helm/templates/deploy.yaml
@@ -34,10 +34,6 @@ spec:
       {{ end }}
       containers:
       - env:
-        {{- range $key, $value := .Values.ssl }}
-        - name: {{ $key }}
-          value:  {{ $value | quote }}
-        {{- end }}
         {{- range $key, $value := .Values.env }}
         - name: {{ $key }}
           value:  {{ $value | quote }}
@@ -46,13 +42,13 @@ spec:
         imagePullPolicy: {{ .Values.images.api.pullPolicy }}
         name: {{ .Values.name }}
         ports:
-        - containerPort: {{ .Values.env.FAV_HTTP_PORT }}
+        - containerPort: {{ .Values.env.SERVER_PORT }}
           name: http
         volumeMounts:
         - mountPath: /tmp
           name: tmp
         {{ if .Values.claimName }}
-        - mountPath: {{ .Values.env.FAV_DATA | quote }}
+        - mountPath: {{ .Values.env.FAV_PATH | quote }}
           name: data
         {{ end }}
         resources:
@@ -60,7 +56,7 @@ spec:
         readinessProbe:
           httpGet:
             path: /healthz
-            port: {{ .Values.env.FAV_HTTP_PORT }}
+            port: {{ .Values.env.SERVER_PORT }}
           initialDelaySeconds: 5
           periodSeconds: 5
         securityContext:
