--- a/fav-helm/templates/netsec.yaml
+++ b/fav-helm/templates/netsec.yaml
@@ -21,7 +21,7 @@ spec:
             {{- end}}
     ports:
     - protocol: TCP
-      port: {{ .Values.env.FAV_HTTP_PORT }}
+      port: {{ .Values.env.SERVER_PORT }}
   egress:
   - {}
   policyTypes:
