Improved swagger documentation Fixed helm chart using incorrect health endpoint

--- a/fav-helm/templates/deploy.yaml
+++ b/fav-helm/templates/deploy.yaml
@@ -55,7 +55,7 @@ spec:
 {{ toYaml .Values.resources | indent 10 }}
         readinessProbe:
           httpGet:
-            path: /healthz
+            path: /actuator/health
             port: {{ .Values.env.SERVER_PORT }}
           initialDelaySeconds: 5
           periodSeconds: 5
