--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,6 @@ spring:
     active: dev
 fav:
   path: "./data"
-  insecure: false
   url: http://localhost:8080
   rate: 10.0
 cache:
@@ -14,3 +13,4 @@ cache:
 logging:
   level:
     dev.castive: trace
+    dev.dcas: trace
