--- a/fav-helm/values.yaml
+++ b/fav-helm/values.yaml
@@ -1,19 +1,23 @@
 name: fav2
 
 replicas: 1
+imagePullSecrets:
+  - name: v2-dcas.dev
 
 # PVC to use
-claimName: fav
+persistence:
+#  storageClassName: nfs
+  accessModes:
+    - ReadWriteMany
+  storage: 1Gi
+#  existingClaim: fav
 
-# arbitrary environment variables to inject to the API pod
-# this can be extended
-env:
-  FAV_PATH: "/data"
-  FAV_INSECURE: false
-  FAV_URL: "https://icon.jmp.castive.dev"
-  CACHE_LIMIT: 60
-  CACHE_DELAY: 10000
-  SERVER_PORT: 8080
+spring:
+  profile: local
+
+service:
+  type: ClusterIP
+  port: 8080
 
 resources:
   requests:
@@ -24,24 +28,42 @@ resources:
     memory: 250Mi
 
 
-images:
-  api:
-    repository: "docker.io/djcass44/fav2"
-    tag: latest
-    pullPolicy: Always
+podSecurityContext: {}
+
+securityContext:
+  runAsNonRoot: true
+  runAsGroup: 1001
+  runAsUser: 1001
+  allowPrivilegeEscalation: false
+  privileged: false
+  capabilities:
+    drop:
+      - ALL
+
+
+image:
+  repository: harbor.v2.dcas.dev/dcas.dev/fav2
+  tag: latest
+  pullPolicy: Always
 
 ingress:
-  enabled: true
-  host: icon.jmp.castive.dev
-  # enforce HTTPS using HSTS (recommended)
-  hsts: false
+  enabled: false
+  annotations:
+    ingress.kubernetes.io/frame-deny: "true"
+    ingress.kubernetes.io/hsts-max-age: "31536000"
+    ingress.kubernetes.io/hsts-include-subdomains: "true"
+    ingress.kubernetes.io/hsts-preload: "true"
+    ingress.kubernetes.io/referrer-policy: "no-referrer"
+    ingress.kubernetes.io/browser-xss-filter: "true"
+    ingress.kubernetes.io/content-type-nosniff: "true"
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  host: icon.v2.dcas.dev
 
 
-# network policy
-netsec:
-  enabled: true
-  # label to allow traffic from
-  source:
-    app: traefik
-  namespace:
-    dev.dcas.netsec/name: kube-system
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
