[helm] add variable for cloud-config uri

--- a/fav-helm/templates/deploy.yaml
+++ b/fav-helm/templates/deploy.yaml
@@ -40,6 +40,8 @@ spec:
       - env:
           - name: SPRING_CLOUD_CONFIG_ENABLED
             value: "true"
+          - name: SPRING_CLOUD_CONFIG_URI
+            value: {{ .Values.spring.configUri }}
           - name: SPRING_PROFILES_ACTIVE
             value: {{ .Values.spring.profile | quote }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
