--- a/fav-helm/values.yaml
+++ b/fav-helm/values.yaml
@@ -14,6 +14,7 @@ persistence:
 
 spring:
   profile: local
+  configUri: http://dcas-cloud-config.production.svc.cluster.local:8888
 
 service:
   type: ClusterIP
