Switched to WebFlux Removed redis requirement

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,8 @@
 version: '3'
 services:
   fav:
-    image: djcass44/fav2:latest
+    image: djcass44/fav2
     build: .
     restart: always
     ports:
       - 8080:8080
-    environment:
-      - SPRING_REDIS_HOST=redis
-    networks:
-      - redis
-  redis:
-    image: redis:6.0-rc-alpine
-    restart: always
-    ports:
-      - 6379:6379
-    networks:
-      - redis
-
-
-networks:
-  redis:
